--- a/package.json
+++ b/package.json
@@ -9,11 +9,18 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@emotion/react": "^11.9.0",
+    "@emotion/styled": "^11.8.1",
+    "@mui/icons-material": "^5.8.3",
+    "@mui/material": "^5.8.3",
     "next": "12.1.6",
     "react": "18.1.0",
-    "react-dom": "18.1.0"
+    "react-dom": "18.1.0",
+    "react-swipeable-views": "^0.14.0"
   },
   "devDependencies": {
+    "@types/node": "^17.0.41",
+    "@types/react": "^18.0.12",
     "eslint": "8.17.0",
     "eslint-config-next": "12.1.6"
   }
